--- a/css/default.css
+++ b/css/default.css
@@ -1,1 +1,38 @@
+@charset "utf-8";
 
+*{
+  margin:0;
+  padding:0;
+}
+
+body{
+  background-color:gray;
+}
+header{
+  background-color:orange;
+}
+#main{
+  background-color:white;
+  width: calc(100%-200px);
+  min-width: 500px;
+  float: left;
+}
+#main1{
+  background-color:green;
+  width: 500px;
+  float: left;
+}
+#main2{
+  background-color:yellow;
+  width: 500px;
+  float: left;
+}
+aside{
+  background-color:blue;
+  width: 200px;
+  float: right;
+}
+footer{
+  background-color:purple;
+  clear: both;
+}
