--- a/css/default.css
+++ b/css/default.css
@@ -18,7 +18,7 @@ header{
 }
 #main{
   background-color:white;
-  width: calc(100%-200px);
+  width: calc(100% - 200px);
   min-width: 500px;
   float: left;
 }
